--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.4",
-    "next": "13.1.6",
+    "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@notionhq/client": "^2.2.5",
     "microcms-js-sdk": "^2.3.2"
   }
 }
