--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@notionhq/client": "^2.2.5",
+    "axios": "^1.4.0",
     "microcms-js-sdk": "^2.3.2"
   }
 }
