--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.17",
-    "@chakra-ui/react": "^2.5.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -20,7 +16,9 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.4",
+    "html-react-parser": "^4.0.0",
     "next": "13.4.3",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
@@ -30,7 +28,14 @@
   },
   "devDependencies": {
     "@notionhq/client": "^2.2.5",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
-    "microcms-js-sdk": "^2.3.2"
+    "dayjs": "^1.11.8",
+    "html-to-react": "^1.6.0",
+    "markdown-to-jsx": "^7.2.1",
+    "microcms-js-sdk": "^2.3.2",
+    "postcss": "^8.4.24",
+    "postcss-nested": "^6.0.1",
+    "tailwindcss": "^3.3.2"
   }
 }
